--- a/Numerical_Analysis_Spline_10_30.ipynb
+++ b/Numerical_Analysis_Spline_10_30.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXz6HagIkQBkrYznu8K2GF",
+      "authorship_tag": "ABX9TyNME+yr9ljTlNWoGRSHM2BL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/wwefddd/Numerical-Analysis-Chebyshev/blob/main/Numerical_Analysis_10_30.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/wwefddd/Numerical-Analysis-Chebyshev/blob/main/Numerical_Analysis_Spline_10_30.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -125,6 +125,8 @@
         "#xp = 10 * np.random. rand(N) #np.zeros(N)\n",
         "#xp = np.sort(xp)\n",
         "#yp = np.random.rand(N)\n",
+        "xp = np.zeros(N)\n",
+        "yp = np.zeros(N)\n",
         "xp[:] = [1,2,3,4,5] # x 좌표\n",
         "yp[:] = [1, 1/2, 1/3, 1/4, 1/5] # y 좌표\n",
         "\n",
@@ -170,7 +172,7 @@
         "id": "-1csO0qFOLO1",
         "outputId": "8176f703-3414-40f3-a46a-a51d712bc5ac"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -255,7 +257,7 @@
           "height": 499
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
