Colab을 통해 생성됨

--- a/Numerical_Analysis_Diffusion(Heat)_Equ_12_02.ipynb
+++ b/Numerical_Analysis_Diffusion(Heat)_Equ_12_02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlwoGdEOeuh5XCMbFeaj21",
+      "authorship_tag": "ABX9TyPi0SggUsi7SrmHBbRztaQL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,6 +148,9 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "\n",
+        "# Boundary condition BC u(t,0) = ut0, u(t,1) = ut1\n",
+        "ut0 = 0\n",
+        "ut1 = 0\n",
         "\n",
         "# time domain\n",
         "dt = 1/1000\n",
@@ -156,7 +159,7 @@
         "t = np.linspace(0, T, M) # discrete time\n",
         "\n",
         "# x domain\n",
-        "a, b = 0, 1\n",
+        "a, b = 0, 1 # domain\n",
         "N = 16 + 1  # number of intervals + 1 point\n",
         "h = (b - a) / (N - 1)\n",
         "x = np.linspace(a ,b, N)\n",
@@ -172,12 +175,13 @@
         "  L[i, i-1:i+2] = [-dt/(h**2), 1 + 2 * dt / (h**2), -dt/(h**2)]\n",
         "\n",
         "#Initial condition\n",
-        "u[0, :] = np.sin(np.pi * x)\n",
+        "u[0, :] = np.sin(np.pi * x) # for IC\n",
+        "\n",
         "print(u)\n",
         "# Compute U\n",
         "for k in range(0, M-1):\n",
-        "   # u[k, 0] = u[k, 0] + dt/h**2 * u(t,0)\n",
-        "   # u[k, N-1] = u[k, N-1] + dt/h**2 * u(t,1) for BC\n",
+        "    u[k, 0] = u[k, 0] + dt/h**2 * ut0 # for BC\n",
+        "    u[k, N-1] = u[k, N-1] + dt/h**2 * ut1 # for BC\n",
         "    u[k+1, 1:N-1] = np.matmul( np.linalg.inv(L), u[k, 1:N-1])\n",
         "\n",
         "tgrid, xgrid = np.meshgrid(t, x)\n",
