Colab을 통해 생성됨

--- a/Diffusion(Heat)_Equ_12_02.ipynb
+++ b/Diffusion(Heat)_Equ_12_02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPi0SggUsi7SrmHBbRztaQL",
+      "authorship_tag": "ABX9TyMPR956S+qbIngQ5l9NQ8BR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,8 +23,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/wwefddd/Numerical-Analysis/blob/main/Numerical_Analysis_Diffusion(Heat)_Equ_12_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/wwefddd/Numerical-Analysis/blob/main/Diffusion(Heat)_Equ_12_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Forward Euler Method"
+      ],
+      "metadata": {
+        "id": "ZnojKTpjsfxy"
+      }
     },
     {
       "cell_type": "code",
@@ -142,6 +151,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Backward Euler Method"
+      ],
+      "metadata": {
+        "id": "W96A-fLTsj5x"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -233,7 +251,7 @@
         "id": "j5G8BJrWP9yd",
         "outputId": "3822121f-9855-4968-c027-b58193929b0f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
